arr-stack/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr-kube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr-kube
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr-kube
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
            - name: VERSION
              value: docker
          image: lscr.io/linuxserver/prowlarr:latest
          name: prowlarr
          ports:
            - containerPort: 9696
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: prowlarr-config-claim
      restartPolicy: Always
      volumes:
        - name: prowlarr-config-claim
          persistentVolumeClaim:
            claimName: prowlarr-config-claim
