arr-stack/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-kube
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 9696
  selector:
    app: prowlarr-kube
